include "about the author" panel

--- a/myweb.html
+++ b/myweb.html
@@ -6,34 +6,50 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Animal World</title>
     <!-- The title will show on the tab(The top of the website)-->
 </head>
 
 <body>
     <div id="nav"></div>
-    <h1>Rabbit</h1>
-    <div id="introduction">
-        <h2>Different Kinds of rabbits</h2>
-        <p>Rabbits are small mammals in the family
-            <em>Leporidae</em> of the order
-            <strong>Lagomorpha</strong>.
-            <br>
-            <br>Oryctolagus cuniculus includes the European rabbit species and its descendants, the world's 305 breeds of domestic
-            rabbit. Sylvilagus includes thirteen wild rabbit species, among them the seven types of cottontail.</p>
-        <h3>The living area of rabbit</h3>
-        <p>A rabbit environment is where it lives - not just where it
-            <em>sleeps, eats, exercises and goes to the toilet</em>, but any place that it has access to. The environment also
-            includes all the objects a rabbit comes into contact with and the materials, such as
-            <strong>bedding</strong>, that it needs to stay healthy and happy.</p>
-        <h4>Top tips for your rabbits' home:</h4>
+    <div class="row">
+        <div class="col-md-8">
+            <h1>Rabbit</h1>
+            <div id="introduction">
+                <h2>Different Kinds of rabbits</h2>
+                <p>Rabbits are small mammals in the family
+                    <em>Leporidae</em> of the order
+                    <strong>Lagomorpha</strong>.
+                    <br>
+                    <br>Oryctolagus cuniculus includes the European rabbit species and its descendants, the world's 305 breeds
+                    of domestic rabbit. Sylvilagus includes thirteen wild rabbit species, among them the seven types of cottontail.</p>
+                <h3>The living area of rabbit</h3>
+                <p>A rabbit environment is where it lives - not just where it
+                    <em>sleeps, eats, exercises and goes to the toilet</em>, but any place that it has access to. The environment
+                    also includes all the objects a rabbit comes into contact with and the materials, such as
+                    <strong>bedding</strong>, that it needs to stay healthy and happy.</p>
+                <h4>Top tips for your rabbits' home:</h4>
+            </div>
+            <ul>
+                <li>active</li>
+                <li>Provide a large living area</li>
+            </ul>
+            <h2>Rabbit Images</h2>
+            <img src="http://cdn1.theweek.co.uk/sites/theweek/files/styles/16x9_710/public/2018/02/hare-cropped.jpg?itok=tU5XSzcu" />
+        </div>
+        <div class="col-md-4">
+            <div class="p-3 mb-3 bg-light rounded">
+                <h4>About the Author</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </div>
+        </div>
     </div>
-    <ul>
-        <li>active</li>
-        <li>Provide a large living area</li>
-    </ul>
-    <h2>Rabbit Images</h2>
-    <img src="http://cdn1.theweek.co.uk/sites/theweek/files/styles/16x9_710/public/2018/02/hare-cropped.jpg?itok=tU5XSzcu" />
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
