--- a/baekseoyoung/molla.html
+++ b/baekseoyoung/molla.html
@@ -6,67 +6,84 @@
 	<title>hungry</title>
 	<link href="molla.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+	 crossorigin="anonymous">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<link rel="stylesheet" href="/Computing/styles.css">
 </head>
 
 <body>
 	<div id="nav"></div>
-	<h1>which meal</h1>
-	<ul>
-		<h2>
-			<li>breakfast</li>
-		</h2>
-		<ul>
-			<li>
-				<a href="hungry/bmeat.html">
-					<u>meat</u>
-				</a>
-			</li>
-			<li>
-				<a href="hungry/bvegi.html">
-					<u>vegitarian</u>
-				</a>
-			</li>
-		</ul>
-		<h2>
-			<li>lunch</li>
-		</h2>
-		<ul>
-			<li>
-				<a href="">
-					<u>meat</u>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<u>vegitarian</u>
-				</a>
-			</li>
-		</ul>
-		<h2>
-			<li>dinner</li>
-		</h2>
-		<ul>
-			<li>
-				<a href="">
-					<u>meat</u>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<u>vegitarian</u>
-				</a>
-			</li>
-		</ul>
-	</ul>
+	<div class="row">
+		<div class="col-md-8">
+			<h1>which meal</h1>
+			<ul>
+				<h2>
+					<li>breakfast</li>
+				</h2>
+				<ul>
+					<li>
+						<a href="hungry/bmeat.html">
+							<u>meat</u>
+						</a>
+					</li>
+					<li>
+						<a href="hungry/bvegi.html">
+							<u>vegitarian</u>
+						</a>
+					</li>
+				</ul>
+				<h2>
+					<li>lunch</li>
+				</h2>
+				<ul>
+					<li>
+						<a href="">
+							<u>meat</u>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<u>vegitarian</u>
+						</a>
+					</li>
+				</ul>
+				<h2>
+					<li>dinner</li>
+				</h2>
+				<ul>
+					<li>
+						<a href="">
+							<u>meat</u>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<u>vegitarian</u>
+						</a>
+					</li>
+				</ul>
+			</ul>
+		</div>
+		<div class="col-md-4">
+			<div class="p-3 mb-3 bg-light rounded">
+				<h4>About the Author</h4>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+					irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+				</p>
+			</div>
+		</div>
+	</div>
+
 	<script>
 		$("#nav").load("../nav.html");
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	 crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	 crossorigin="anonymous"></script>
 </body>
 
 </html>
