--- a/jack.html
+++ b/jack.html
@@ -10,18 +10,30 @@
 
 <body>
     <div id="nav"></div>
-    <div>
-        <h1>Quantum computers</h1>
-        <img src="images/quantum computer.jpg" width=30%>
-        <p>Quantum computers could be used to solve many of today's pressing problems. They have the unique ability to store
-            data as a probability function rather than as simple 1s or 0s. These data are known as "qubits", which is short
-            for "quantum bits".</p>
-        <p>Today, the very best quantum computers are far from outcompeting simulations on traditional machines. But the power
-            of a quantum computer is exponentially dependent on the number of qubits it uses, and therefore they are always
-            getting more and more powerful. Soon there will be a point where the power of quantum computers surpasses that
-            of traditional machines.</p>
-        <p>There are also some dangers involved with quantum computers. Most of today's encryption relies on methods which could
-            be easily broken by such a machine without specially developed quantum encryption.</p>
+    <div class="row">
+        <div class="col-md-8">
+            <h1>Quantum computers</h1>
+            <img src="images/quantum computer.jpg" width=30%>
+            <p>Quantum computers could be used to solve many of today's pressing problems. They have the unique ability to store
+                data as a probability function rather than as simple 1s or 0s. These data are known as "qubits", which is
+                short for "quantum bits".</p>
+            <p>Today, the very best quantum computers are far from outcompeting simulations on traditional machines. But the
+                power of a quantum computer is exponentially dependent on the number of qubits it uses, and therefore they
+                are always getting more and more powerful. Soon there will be a point where the power of quantum computers
+                surpasses that of traditional machines.</p>
+            <p>There are also some dangers involved with quantum computers. Most of today's encryption relies on methods which
+                could be easily broken by such a machine without specially developed quantum encryption.</p>
+        </div>
+        <div class="col-md-4">
+            <div class="p-3 mb-3 bg-light rounded">
+                <h4>About the Author</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
