--- a/kelly.html
+++ b/kelly.html
@@ -6,36 +6,25 @@
     <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="kellystyle.css">
+    <link rel="stylesheet" type="text/css" href="/Computing/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&effect=anaglyph" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-
 </head>
 
 <body>
     <div id="nav"></div>
-    <div id="header" class="ui main text container">
-        <div class="font-effect-anaglyph ui huge header">applications of computing</div>
-        <p class="desc ui medium header">and how it has contributed to society</p>
-    </div>
-    <div class="ui three column doubling stackable grid container">
-        <div class="column"></div>
-        <div class="column">
+    <div class="row">
+        <div class="col-md-8">
+            <h1 class="font-effect-anaglyph">applications of computing</h1>
+            <p>and how it has contributed to society</p>
             <p>define computing</p>
             <p>/kəmˈpjuːtɪŋ/
                 <i>noun</i>
             </p>
             <p>must it involve the literal use of computers hardware and software?</p>
-        </div>
-        <div class="column"></div>
-
-        <div class="column"></div>
-        <div class="column">
-            <div class="ui small header">computational thinking</div>
             <p>here in durham university, there are several aims for computational thinking as a module.</p>
             <div class="ui list">
                 <div class="item">
@@ -81,12 +70,6 @@
             <p>
                 computational thinking in daily life: pipeling, hashing, sorting.
             </p>
-
-        </div>
-        <div class="column"></div>
-
-        <div class="column"></div>
-        <div class="column">
             <div class="ui small header">data analytics</div>
             <p>data analytics might not necessarily be the "best" contribution to society, but i am partial that it has contributed
                 a fair bit.</p>
@@ -95,9 +78,20 @@
             </p>
             <p>businesses benefit from knowing credit defaulters, sentiment analysis of their demographics.</p>
             <p>what would the
-                <a class="special" href="http://marvelcinematicuniverse.wikia.com/wiki/Zola%27s_Algorithm">world</a> be like when prescriptive analytics becomes optimized for the layman?</p>
+                <a class="special" href="http://marvelcinematicuniverse.wikia.com/wiki/Zola%27s_Algorithm">world</a>
+                be like when prescriptive analytics becomes optimized for the layman?</p>
+
         </div>
-        <div class="column"></div>
+        <div class="col-md-4">
+            <div class="p-3 mb-3 bg-light rounded">
+                <h4>About the Author</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </div>
+        </div>
     </div>
 
     <div class="ui main text container">
@@ -113,7 +107,7 @@
             initialRating: 2,
             maxRating: 3
         });
-      $("#nav").load("nav.html");
+        $("#nav").load("nav.html");
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
