add sunny's information and other tiny changes

--- a/sunnyp.html
+++ b/sunnyp.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Computer Graphics</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -18,35 +18,47 @@
         <div class="col-md-8">
             <h1>Computer Graphics</h1>
             <p>
-                sub-field of computer science about about synthesizing and manipulating visual content<br>
-                applied to provide visual information to users on computational environment<br>
+                sub-field of computer science about about synthesizing and manipulating visual content
+                <br> applied to provide visual information to users on computational environment
+                <br>
             </p>
 
             <hr>
 
             <h2>Two-Dimensional(2D)</h2>
             <p>there are 2 ways of showing digital images on computer: raster graphics and vector graphics</p>
-            <img src="https://signalizenj.files.wordpress.com/2015/01/vector_raster.gif" width="590" title="Compairison of raster and vector images"><br><br>
+            <img src="https://signalizenj.files.wordpress.com/2015/01/vector_raster.gif" width="590" title="Compairison of raster and vector images">
+            <br>
+            <br>
             <h3>raster graphics</h3>
             <div class="explaination">
-                A set of digital values(also called picture elements or dots or pixels), containing fixed number of rows and colums of pixels. <br>
-                Majority of images shown on computer screen are raster images<br>
-                Raster images are created by input devices such as digital cameras, scanners. <br>
-                Also synthesized from arbitrary non-image data such as mathmatical functions, geometric models. <br>
+                A set of digital values(also called picture elements or dots or pixels), containing fixed number of rows and colums of pixels.
+                <br> Majority of images shown on computer screen are raster images
+                <br> Raster images are created by input devices such as digital cameras, scanners.
+                <br> Also synthesized from arbitrary non-image data such as mathmatical functions, geometric models.
+                <br>
                 <div class="formatex">
-                    Example of raster graphics file format: jpeg, png, apng, gif, mpeg4<br><br>
+                    Example of raster graphics file format: jpeg, png, apng, gif, mpeg4
+                    <br>
+                    <br>
                 </div>
             </div>
             <h3>vector graphics</h3>
             <div class="explaination">
-                Based on mathematical geometry(vector) to create images. Has points ,lines and curves to form the shapes. <br>
-                Each of the points are the positions on x-axis and y-axis of the work plane, defining the direction and the path. <br>
-                Each of the path also may have values of stroke color, shape, curve, thickness and fill. <br>
+                Based on mathematical geometry(vector) to create images. Has points ,lines and curves to form the shapes.
+                <br> Each of the points are the positions on x-axis and y-axis of the work plane, defining the direction and
+                the path.
+                <br> Each of the path also may have values of stroke color, shape, curve, thickness and fill.
+                <br>
                 <div class="formatex">
-                    Example of vector graphics file format: svg, eps, pdf<br><br>
+                    Example of vector graphics file format: svg, eps, pdf
+                    <br>
+                    <br>
                 </div>
             </div>
-            <p>vector graphics and raster graphics are often combined in one image<br></p>
+            <p>vector graphics and raster graphics are often combined in one image
+                <br>
+            </p>
 
             <hr>
 
@@ -55,8 +67,10 @@
             <hr>
 
             <div class="sources">
-                sources: <br>
-                <a href="https://en.wikipedia.org/wiki/Computer_graphics"> computer graphics wikipedia</a><br>
+                sources:
+                <br>
+                <a href="https://en.wikipedia.org/wiki/Computer_graphics"> computer graphics wikipedia</a>
+                <br>
                 <a href="https://en.wikipedia.org/wiki/Digital_image"> digital image wikipedia</a>
             </div>
         </div>
@@ -66,9 +80,16 @@
             <div class="p-3 mb-3 bg-light rounded">
                 <h4>About the Author</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Baek Seoyoung, or as people call her, Sunny. Very apt for someone who radiates positivity, raises others(' spirits), and
+                    as equally, if not more, bright.
+                </p>
+                <p>
+                    she has a particular research interest in computer graphics, image processing and design, and hopes to graduate with a piece in virtual reality.
+                </p>
+                <p>
+                    do find her recent works on
+                    <a href="https://github.com/baekseoyoung">github</a> and connect with her
+                    <a href="https://www.facebook.com/sunny.baek.792">here</a>.
                 </p>
             </div>
 
@@ -87,15 +108,15 @@
         </div>
     </div>
 
-    
-    
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script>
-		$("#nav").load("nav.html");
+        $("#nav").load("nav.html");
     </script>
 </body>
 
