--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="jumbotron">
     <div class="container">
       <iframe width="100%" height="500px" src="https://www.youtube.com/embed/Daar5xtUtd8?controls=0&autoplay=1&loop=1&playlist=Daar5xtUtd8&disablekb=1&rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p class="lead">This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
+      <p class="lead">This is the homepage of a website by Jack, Tom, Sunny, and Kelly.</p>
 
     </div>
   </div>
