--- a/kelly.html
+++ b/kelly.html
@@ -72,6 +72,8 @@
         </div>
         <div class="col-md-12">
             <hr/>
+            <!-- text below this line seems a bit odd. No need to declare this information at the bottom of the page because you already have a author information section
+            -->
             <p>hello, i am yuenhy. you can find my work on
                 <a href="github.com/yuenhy">github</a> or connect with me on
                 <a href="https://www.linkedin.com/in/yuenhy/">linkedin</a>.</p>
